[package]
name = "gpio-dw-linux-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Tanghanwen <tangq7443@163.com>"]
description = "GPIO DW linux adapater"
license = "GPL-3.0-or-later OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dw_apb_gpio = { path = "../dw-apb-gpio-rust/", features=["linux"]}



